- added new scheduled process to be executed on first of each year to clean up workers holidays

--- a/wksp/timehammer/src/main/resources/templates/demo.html
+++ b/wksp/timehammer/src/main/resources/templates/demo.html
@@ -153,6 +153,11 @@
                             <button id="updateWorkersHolidays" type="button" class="btn btn-sm btn-success col-md-1 schedule-button"><i class="fas fa-play"></i></button>
                             <small class="text-left col-md-4 pl-2 schedule-duration"></small>
                         </div>
+                        <div class="form-row mt-2 align-items-center">
+                            <span class="lead text-left col-md-7">Limpiar vacaciones pasadas de trabajadores</span>
+                            <button id="cleanPastWorkersHolidays" type="button" class="btn btn-sm btn-success col-md-1 schedule-button"><i class="fas fa-play"></i></button>
+                            <small class="text-left col-md-4 pl-2 schedule-duration"></small>
+                        </div>
                     </form>
                 </div>
             </div>
