--- a/wksp/timehammer/src/main/resources/templates/register.html
+++ b/wksp/timehammer/src/main/resources/templates/register.html
@@ -32,15 +32,28 @@
                     <input type="hidden" name="registrationId" value="{registrationId}" />
 
                     <div class="row">
+                        <div class="col-md-12 mb-3">
+                            <label for="company">Empresa (*)</label>
+                            <select class="form-control custom-select custom-select-sm d-block w-100" id="company" name="company" aria-describedby="companyHelp">
+                                <option value=""></option>
+                                {#each companies}
+                                <option value="{it.code}">{it.name}</option>
+                                {/each}
+                            </select>
+                            <small id="companyHelp" class="form-text text-muted">Necesitamos saber la compañía en la que trabajas para poder autenticarte</small>
+                            <div id="companyInvalidFeedback" class="invalid-feedback"></div>
+                        </div>
+                    </div>
+                    <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="externalId">Usuario (*)</label>
-                            <input type="text" class="form-control" id="externalId" name="externalId" placeholder="" value="" aria-describedby="externalIdHelp">
+                            <input type="text" class="form-control form-control-sm" id="externalId" name="externalId" placeholder="" value="" aria-describedby="externalIdHelp">
                             <small id="externalIdHelp" class="form-text text-muted">El mismo usuario que en tu empresa.</small>
                             <div id="externalIdInvalidFeedback" class="invalid-feedback"></div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="externalPassword">Contraseña (*)</label>
-                            <input type="password" class="form-control" id="externalPassword" name="externalPassword" placeholder="" value="" aria-describedby="externalPasswordHelp">
+                            <input type="password" class="form-control form-control-sm" id="externalPassword" name="externalPassword" placeholder="" value="" aria-describedby="externalPasswordHelp">
                             <small id="externalPasswordHelp" class="form-text text-muted">La misma contraseña que en tu empresa. Esta contraseña es necesaria para poder automatizar ciertas acciones.</small>
                             <div id="externalPasswordInvalidFeedback" class="invalid-feedback"></div>
                         </div>
@@ -49,7 +62,7 @@
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="workCity">Ciudad de trabajo (*)</label>
-                            <select class="form-control custom-select d-block w-100" id="workCity" name="workCity" aria-describedby="workCityHelp">
+                            <select class="form-control custom-select custom-select-sm d-block w-100" id="workCity" name="workCity" aria-describedby="workCityHelp">
                                 <option value=""></option>
                                 {#each cities}
                                 <option value="{it.code}">{it.name}</option>
@@ -60,7 +73,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="workSsid">SSID de la WiFi del trabajo</label>
-                            <input type="text" class="form-control" id="workSsid" name="workSsid" value="" placeholder="" aria-describedby="workSsidHelp">
+                            <input type="text" class="form-control form-control-sm" id="workSsid" name="workSsid" value="" placeholder="" aria-describedby="workSsidHelp">
                             <small id="workSsidHelp" class="form-text text-muted">Necesario si se quiere automatizar el proceso de fichaje</small>
                             <div id="invalidFeedbackWorkSsid" class="invalid-feedback"></div>
                         </div>
