- decoupled worker external id from business logic, now the internal id is used everywhere

--- a/wksp/timehammer/src/main/resources/templates/register.html
+++ b/wksp/timehammer/src/main/resources/templates/register.html
@@ -46,10 +46,10 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="externalId">Usuario (*)</label>
-                            <input type="text" class="form-control form-control-sm" id="externalId" name="externalId" placeholder="" value="" aria-describedby="externalIdHelp">
-                            <small id="externalIdHelp" class="form-text text-muted">El mismo usuario que en tu empresa.</small>
-                            <div id="externalIdInvalidFeedback" class="invalid-feedback"></div>
+                            <label for="internalId">Usuario (*)</label>
+                            <input type="text" class="form-control form-control-sm" id="internalId" name="internalId" placeholder="" value="" aria-describedby="internalIdHelp">
+                            <small id="internalIdHelp" class="form-text text-muted">El mismo usuario que en tu empresa.</small>
+                            <div id="internalIdInvalidFeedback" class="invalid-feedback"></div>
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="externalPassword">Contraseña (*)</label>
