--- a/wksp/timehammer/src/main/resources/templates/demo.html
+++ b/wksp/timehammer/src/main/resources/templates/demo.html
@@ -94,10 +94,10 @@
                 <div class="col-md-10">
                     <h4 class="mb-3">Trabajador</h4>
                     <form id="workersForm" class="form-inline" novalidate="novalidate" action="/demo/workers" method="GET">
-                        <select class="custom-select custom-select-sm d-block w-100 col-md-3 offset-md-4 mr-2" id="workerExternalId" name="workerExternalId">
+                        <select class="custom-select custom-select-sm d-block w-100 col-md-3 offset-md-4 mr-2" id="workerInternalId" name="workerInternalId">
                             <option value=""></option>
                             {#each workers}
-                            <option value="{it}">{it}</option>
+                            <option value="{it.internalId}">{it.name}</option>
                             {/each}
                         </select>
 
