- removed passwords from database and stored in memory

--- a/wksp/timehammer/src/main/resources/templates/register.html
+++ b/wksp/timehammer/src/main/resources/templates/register.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" integrity="sha256-g7HgoMySZyonuPwHTORf+uGHEeOm7VRI2kfXWXlJnco=" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="timehammer.timetable.css" />
-    <link rel="stylesheet" href="registration.css" />
+    <link rel="stylesheet" href="register.css" />
 
     <script src="https://kit.fontawesome.com/ebff2e60d9.js" crossorigin="anonymous"></script>
 
-    <title>Timehammer</title>
+    <title>Timehammer: Registro</title>
 </head>
 <body class="bg-light">
     <div class="container">
@@ -29,7 +29,7 @@
             <div class="col-md-10">
                 <h4 class="mb-3">Formulario de registro</h4>
                 <form class="needs-validation" novalidate="novalidate" action="register" method="POST">
-                    <input type="hidden" name="registrationId" value="{registrationId}" />
+                    <input type="hidden" name="internalId" value="{internalId}" />
 
                     <div class="row">
                         <div class="col-md-12 mb-3">
@@ -105,6 +105,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js" integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js" integrity="sha256-Z639rJO57BiZzQDlWsGyF+EJ3Fs3nD4pQPkfimTy3S8=" crossorigin="anonymous"></script>
     <script src="timehammer.timetable.js"></script>
-    <script src="registration.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
